@@ -61,7 +61,7 @@ DEFAULTS = {
     "manage_dhcp_mode"            : "isc",
     "next_server"                 : "127.0.0.1",
     "pxe_just_once"               : 0,
-    "run_post_install_trigger"    : 0,
+    "run_install_trigger"         : 1,
     "server"                      : "127.0.0.1",
     "snippetsdir"                 : "/var/lib/cobbler/snippets",
     "syslog_port"                 : 25150,
